--- a/todo
+++ b/todo
@@ -1,5 +1,8 @@
-2) remove leading spaces on initial words
-3) let newlines stop/start chains, so we can start from nothing
-4) add 1, 2, 3, ... N pairs to word buffer as well
+1) sync stuff with remote repo
+1.5) remove Word class stuff                                            ?
+3) let newlines stop/start chains, so we can start from nothing         ?
 5) HTTP server
+    1) dont hang on accept
+    2) make echo server
+    3) research http
 6) make HTTP server use jarkov chain to reply to contents
