--- a/todo
+++ b/todo
@@ -1,15 +1,32 @@
-1) sync stuff with remote repo
+commits
+    Tests created
+    Make soft/hard limits work
+    Everything else (general cleanup)
+
+
+
+need a way to give soft/hard limit in terminal mode
+fix vector stuff with initialising it at context length
+reverse initialiseWordBuffer order
+1) enforce saving with .jkc
+    Try catch around loading?
 1.5) remove Word class stuff                                            ?
 3) remove starting and trailing empty spaces
     make regurgitate's i start at [word count] of input, and make soft limit actually work
     let us add training data to a model again
-4) add soft cutoff for new sentences, and hard limit for words
-    implement this into HTTP 
+    reformat how saving/loading works
+    make soft/hard limit actually work
 5) HTTP server
     1) make server infinite?
     2) add word count to response?
     4) maybe change how the toJson works
+    5) separate executable for server
+5.5) config file
+    1) model directory for server
+    3) port
+5.75) make prompt contain ' on either side to distinguish it
 6) Documentation
+    Add chain length
 7) Tests
     1) Python script that requests it and checks it against another string from a given training data
     2) program that gives inputs to train/save a file, then run it?
