--- a/todo
+++ b/todo
@@ -1,6 +1,6 @@
 commits
     Tests created
-    Make soft/hard limits work
+    Make soft/hard limits work (?)
     Everything else (general cleanup)
 
 
@@ -8,25 +8,19 @@ commits
 need a way to give soft/hard limit in terminal mode
 fix vector stuff with initialising it at context length
 reverse initialiseWordBuffer order
+make sure everything uses the same naming convention/make a style guide?
+make everything have stds
+add server stuff to source files
 1) enforce saving with .jkc
     Try catch around loading?
 1.5) remove Word class stuff                                            ?
 3) remove starting and trailing empty spaces
     make regurgitate's i start at [word count] of input, and make soft limit actually work
-    let us add training data to a model again
-    reformat how saving/loading works
     make soft/hard limit actually work
 5) HTTP server
     1) make server infinite?
-    2) add word count to response?
     4) maybe change how the toJson works
-    5) separate executable for server
-5.5) config file
-    1) model directory for server
-    3) port
 5.75) make prompt contain ' on either side to distinguish it
-6) Documentation
-    Add chain length
 7) Tests
     1) Python script that requests it and checks it against another string from a given training data
     2) program that gives inputs to train/save a file, then run it?
