fix params/added run-server parameters/some test progress

--- a/todo
+++ b/todo
@@ -1,30 +1,1 @@
-commits
-    Cleanup 1 (terminal chain use QOL features (limits, remembering paths), model versioning, and minor code refactor)
-        fix regurgitation error on bad input
-    Tests created
-    Everything else (general cleanup)
-
-
-make saving format version use a hash or something, so it cant get mis-seen for long lengths
-regurgitate word count is wrong
-make regurgitation take into account the input word count
-
-fix vector stuff with initialising it at context length
-reverse initialiseWordBuffer order
-make sure everything uses the same naming convention/make a style guide?
-make everything have stds
-
-1) enforce saving with .jkc
-    Try catch around loading?
-1.5) remove Word class stuff                                            ?
-3) remove starting and trailing empty spaces
-    make regurgitate's i start at [word count] of input
-5) HTTP server
-    1) make server infinite?
-    4) maybe change how the toJson works
-    5) make prompt contain ' on either side to distinguish it
-7) Tests
-    1) Python script that requests it and checks it against another string from a given training data
-    2) program that gives inputs to train/save a file, then run it?
-    3) then get it from the api via python
-https://medium.com/@aryandev512/i-wrote-a-http-server-from-scratch-in-c-0a97e8252371
+test server seems to run an old version of the consumer function - doesnt give the same outputs as when ran through the real server
